css/style.css
/* ... */
.faq .collapse-toggler .text {
  flex: 0 0 32.96vw;
}

@media (min-width: 1024px) {
  .faq .tab-btn::after {
    content: '';
    position: absolute;
    top: 50%;
    right: 0;
    height: 1px;
    width: 1vw;
    background-color: black;
    opacity: 0;
    transition: all .4s ease;
  }
  
  .faq .tab-btn.active::after {
    opacity: 1;
  }
}

@media (max-width: 1023.98px) {
  .faq-page {
    padding-top: 19.36vw;
  }
  
  .faq {
    padding: 4vw 0 0 0;
  }
  
  .faq .container {
    width: 90%;
  }
  
  .faq .tabs {
    display: block;
  }
  
  /* Sidebar */
  .faq .sidebar {
    margin-bottom: 7.33vw;
    position: static;
    overflow: hidden;
  }
  
  .faq h1 {
    text-align: center;
    margin-bottom: 6vw;
  }

  .faq .tab-navigation ul {
    display: flex;
    align-items: center;
    white-space: nowrap;
    overflow: auto;
    padding-bottom: 4vw;
  }

  .faq .tab-btn {
    padding-right: 0;
    margin-bottom: 0;
  }
  
  .faq .tab-btn:not(:last-child) {
    margin-left: 5.33vw;
  }

  /* Main */
  .faq .collapsible {
    padding: 4.26vw 0;
  }
  
  .faq .collapse > div {
    width: 78vw;
    line-height: 1.16;
    margin-right: 0;
    padding-top: 1.33vw;
  }
  
  .faq .collapse-toggler {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
  }

  .faq .collapse-toggler .icon {
    flex: 0 0 100%;
  }
  
  .faq .collapse-toggler .icon img {
    width: 7.2vw;
    margin-left: 0;
    margin-bottom: 2.5vw;
  }
  
  .faq .collapse-toggler .arrow {
    margin-right: auto;
  }
  
  .faq .collapse-toggler .arrow img {
    width: 3.73vw;
  }

  .faq .collapse-toggler .text {
    flex: 0 0 78.66vw;
  }
}

/* #Business Customers FAQ
================================================== */
.business-customers-page .faq {
  position: relative;
}

/* Sidebar */
.business-customers-page .faq .sidebar {
  position: static;
}

.business-customers-page .faq .sidebar .img {
  position: absolute;
  bottom: 2.25vw;
  right: 0;
}

.business-customers-page .faq .sidebar .img img,
.business-customers-page .faq .sidebar .img picture {
  width: 30.57vw;
}

/* Main */
.business-customers-page .faq .accordion {
  margin-bottom: 1.3vw;
}

@media (max-width: 1023.98px) {
  /* Sidebar */
  .business-customers-page .faq .sidebar {
    position: static;
    padding-top: 73.46vw;
    margin-bottom: 6.65vw;
  }

  .business-customers-page .faq .sidebar h1 {
    margin-bottom: 0;
  }
  
  .business-customers-page .faq .sidebar .img {
    position: absolute;
    bottom: auto;
    top: 4vw;
    right: 0;
  }
  
  .business-customers-page .faq .sidebar .img img,
  .business-customers-page .faq .sidebar .img picture {
    width: 95.73vw;
  }
  
  /* Main */
  .business-customers-page .faq .accordion {
    margin-bottom: 6.65vw;
  }

  .business-customers-page .faq .link-wrap {
    display: flex;
    justify-content: center;
  }
}

/* #Customers 2
================================================== */
.customers-2 {
  padding-bottom: 6.25vw;
}

.customers-2 .container {
  width: 89%;
}

.customers-2 h2 {
  text-align: center;
  margin-bottom: 4.16vw;
  line-height: 1;
}

.customers-2 ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  margin-bottom: -3.125vw;
}

.customers-2 li {
  flex: 0 0 16.66%;
  margin-bottom: 3.125vw;
}

.customers-2 img {
  margin: 0 auto;
  width: 5vw;
  height: 4vw;
  object-fit: contain;
  object-position: center;
}

@media (max-width: 1023.98px) {
  .customers-2 {
    padding: 13.33vw 0 0 0;
  }
  
  .customers-2 .container {
    width: 100%;
  }
  
  .customers-2 h2 {
    margin-bottom: 8vw;
  }
  
  .customers-2 ul {
    margin-bottom: -7vw;
  }
  
  .customers-2 li {
    flex: 0 0 33.33%;
    margin-bottom: 7vw;
  }
  
  .customers-2 img {
    width: 15vw;
    height: 13vw;
  }
}

/* #Projects
================================================== */
.projects {
  padding-bottom: 4.16vw;
  position: relative;
  z-index: 1;
}

.projects .container {
  padding: 0 2.34vw;
}

.projects .heading {
  margin-bottom: 1.8vw;
  text-align: center;
}

.projects .tab-navigation {
  margin-bottom: 2.34vw;
}

.projects .tab-navigation ul {
  display: flex;
  align-items: center;
  justify-content: center;
}

.projects .tab-btn:not(:last-child) {
  margin-left: 2vw;
}

.projects .tab-btn {
  color: #949494;
}

.projects .tab-btn.active {
  color: black;
}

.projects .cards {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-gap: 2vw;
  margin-bottom: 1.5vw;
}

.projects .cards li:nth-child(1) {grid-column: 1 / 4;}
.projects .cards li:nth-child(2) {grid-column: 4 / 7;}
.projects .cards li:nth-child(3) {grid-column: 1 / -1;}
.projects .cards li:nth-child(4) {grid-column: 1 / 3;}
.projects .cards li:nth-child(5) {grid-column: 3 / 5;}
.projects .cards li:nth-child(6) {grid-column: 5 / -1;}

@media (min-width: 1024px) {
  .projects .solutions-card .text {
    width: 26vw;
    justify-content: flex-end;
    overflow: hidden;
  }
  
  .projects .solutions-card .text p {
    max-height: 0;
  }
  
  .projects .solutions-card:hover .text p {
    max-height: 5.2vw;
  }
}
/* ... */

